[workspace]
default-members = ["concision"]
members = [
  "concision", 
  "core", 
  "data", 
  "derive", 
  "ext", 
  "init", 
  "macros", 
  "params", 
  "traits",
]
resolver = "3"

[workspace.package]
authors = ["FL03 <jo3mccain@icloud.com> (https://github.com/FL03)", "Scattered-Systems <support@scsys.io> (https://github.com/scattered-systems)"]
categories = ["algorithms", "mathematics", "science"]
description = "Concision is a toolkit for designing machine-learning models in Rust."
edition = "2024"
homepage = "https://github.com/FL03/concision/wiki"
keywords = ["data-science", "machine-learning", "scsys", "toolkit"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/FL03/concision.git"
rust-version = "1.85.0"
version = "0.3.1"

[workspace.dependencies]
concision = { default-features = false, path = "concision", version = "0.3.1" }
# sdk
concision-core = { default-features = false, path = "core", version = "0.3.1" }
concision-data = { default-features = false, path = "data", version = "0.3.1" }
concision-derive = { default-features = false, path = "derive", version = "0.3.1" }
concision-init = { default-features = false, path = "init", version = "0.3.1" }
concision-macros = { default-features = false, path = "macros", version = "0.3.1" }
concision-neural = { default-features = false, path = "neural", version = "0.3.1" }
concision-params = { default-features = false, path = "params", version = "0.3.1" }
concision-traits = { default-features = false, path = "traits", version = "0.3.1" }
# custom models & extras
concision-ext = { default-features = false, path = "ext", version = "0.3.1" }
# custom
contained = { default-features = false, features = ["derive"], version = "0.2.2" }
rspace = { default-features = false, version = "0.0.7" }
variants = { default-features = false, features = ["derive"], version = "0.0.1" }
# data structures
hashbrown = { default-features = false, version = "0.16" }
# tensors & arrays
ndarray = { default-features = false, version = "0.17" }
ndarray-linalg = { default-features = false, version = "0.18" }
ndarray-rand = { default-features = false, version = "0.16" }
ndarray-stats = { version = "0.7" }
# benchmarking
criterion = { version = "0.8" }
# concurrency & parallelism
crossbeam = { default-features = false, version = "0.8" }
rayon = { default-features = false, version = "1" }
rayon-core = { default-features = false, version = "1" }
# data & serialization
serde = { default-features = false, features = ["derive"], version = "1" }
serde_derive = { default-features = false, version = "1" }
serde_json = { default-features = false, version = "1" }
# math
approx = { version = "0.5" }
num = { default-features = false, version = "0.4" }
num-complex = { default-features = false, version = "0.4" }
num-integer = { default-features = false, version = "0.1" }
num-traits = { default-features = false, version = "0.2" }
rustfft = { version = "6" }
# networking
reqwest = { default-features = false, version = "0.13" }
# random
getrandom = { default-features = false, version = "0.3" }
rand = { default-features = false, version = "0.9" }
rand_core = { default-features = false, version = "0.9" }
rand_distr = { default-features = false, version = "0.5" }
# errors
anyhow = { default-features = false, version = "1" }
thiserror = { default-features = false, version = "2" }
# logging
tracing = { default-features = false, features = ["attributes", "log"], version = "0.1" }
tracing-subscriber = { features = ["ansi", "env-filter", "fmt"], version = "0.3" }
# time
chrono = { default-features = false, version = "0.4" }
humantime = { version = "2" }
time = { default-features = false, version = "0.3" }
# macros and utilities
convert_case = { version = "0.10" }
either = { version = "1" }
lazy_static = { version = "1" }
paste = { version = "1" }
smart-default = "0.7"
strum = { default-features = false, features = ["derive"], version = "0.27" }

# ************* [Profiles] *************
[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = "thin"
opt-level = 2
overflow-checks = true
panic = "abort"
rpath = true
strip = false

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 0
overflow-checks = false
panic = "abort"
rpath = false
strip = "debuginfo"
