[package]
build = "build.rs"
name = "concision"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
doc-scrape-examples = true
features = ["full"]
rustc-args = ["--cfg", "docsrs"]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[lib]
crate-type = ["cdylib", "rlib"]
bench = true
doc = true
doctest = true
test = true

# ************* [Benchmarks] *************
[[bench]]
harness = false
name = "default"
path = "benches/default.rs"
required-features = ["std"]

[[bench]]
harness = false
name = "params"
path = "benches/params.rs"
required-features = [
  "approx",
  "rand",
  "std",
  "tracing",
]

# ************* [Examples] *************
[[example]]
name = "basic"
required-features = [
  "approx",
  "rand",
  "std",
  "tracing",
]

# ************* [Unit Tests] *************
[[test]]
name = "default"

[[test]]
name = "simple"
path = "tests/simple/main.rs"
required-features = ["approx", "default", "rand"]

[dependencies]
concision-core = { workspace = true }
concision-data = { optional = true, workspace = true }
concision-derive = { optional = true, workspace = true }
concision-macros = { optional = true, workspace = true }

[dev-dependencies]
anyhow = { features = ["std"], workspace = true }
approx = { workspace = true }
criterion = { features = ["plotters"], workspace = true }
lazy_static = { workspace = true }
ndarray = { workspace = true }
num = { features = ["rand", "serde"], workspace = true }
serde = { features = ["std"], workspace = true }
tracing = { features = ["log", "std", "attributes"], workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = [
  "rand",
  "std",
]

full = [
  "default",
  "approx",
  "data",
  "derive",
  "macros",
  "rand",
  "serde",
  "tracing"
]

nightly = [
  "concision-core/nightly",
  "concision-data?/nightly",
]

# ************* [FF:Features] *************
derive = ["dep:concision-derive"]

macros = ["dep:concision-macros"]

data = ["dep:concision-data"]

neural = ["alloc"]

# ************* [FF:Environments] *************
std = [
  "alloc",
  "concision-core/std",
  "concision-data?/std",
]

wasi = [
  "concision-core/wasi",
  "concision-data?/wasi",
]

wasm = [
  "concision-core/wasm",
  "concision-data?/wasm",
]

# ************* [FF:Dependencies] *************
alloc = [
  "concision-core/alloc",
  "concision-data?/alloc",
]

approx = [
  "concision-core/approx",
  "concision-data?/approx",
]

complex = [
  "concision-core/complex",
  "concision-data?/complex",
]

json = [
  "concision-core/json",
  "concision-data?/json",
]

rand = [
  "concision-core/rand",
  "concision-data?/rand",
]

rng = [
  "concision-core/rng",
  "concision-data?/rng",
]

rayon = [
  "concision-core/rayon",
  "concision-data?/rayon",
]

rustfft = [
  "concision-core/rustfft",
]

serde = [
  "concision-core/serde",
  "concision-data?/serde",
]

tracing = [
  "concision-core/tracing",
  "concision-data?/tracing",
]

# ********* [FF] Blas *********
blas = [
  "concision-core/blas",
  "concision-data?/blas",
]

intel-mkl-system = ["blas"]

intel-mkl-static = ["blas"]

netlib-system = ["blas"]

netlib-static = ["blas"]

openblas-system = ["blas"]

openblas-static = ["blas"]
