[package]
build = "build.rs"
name = "concision"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
doc-scrape-examples = true
features = ["default"]
rustc-args = ["--cfg", "docsrs"]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "v{{version}}"

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doc = true
doctest = true
name = "concision"
path = "lib.rs"
test = true

[[bench]]
harness = false
name = "params"
path = "benches/params.rs"
required-features = [
  "approx",
  "rand",
  "std",
  "tracing",
]

[[example]]
name = "params"
required-features = ["rand", "std", "tracing"]

[[example]]
name = "simple"
required-features = ["rand", "std", "tracing"]

[dependencies]
concision-core = { workspace = true }
concision-data = { optional = true, workspace = true }
concision-derive = { optional = true, workspace = true }
concision-macros = { optional = true, workspace = true }

[dev-dependencies]
anyhow = { features = ["std"], workspace = true }
approx = { workspace = true }
criterion = { features = ["plotters"], workspace = true }
lazy_static = { workspace = true }
ndarray = { workspace = true }
num = { features = ["rand", "serde"], workspace = true }
serde = { features = ["std"], workspace = true }
tracing = { features = ["attributes", "log", "std"], workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = [
  "rand",
  "std",
]

full = [
  "approx",
  "data",
  "default",
  "derive",
  "macros",
  "rand",
  "serde",
  "tracing",
]

nightly = [
  "concision-core/nightly",
  "concision-data?/nightly",
]

# ************* [FF:Features] *************
derive = ["dep:concision-derive"]

macros = ["concision-core/macros", "dep:concision-macros"]

data = ["dep:concision-data"]

neural = ["alloc"]

# ************* [FF:Environments] *************
std = [
  "alloc",
  "concision-core/std",
  "concision-data?/std",
]

wasi = [
  "concision-core/wasi",
  "concision-data?/wasi",
]

wasm = [
  "concision-core/wasm",
  "concision-data?/wasm",
]

# ************* [FF:Dependencies] *************
alloc = [
  "concision-core/alloc",
  "concision-data?/alloc",
]

approx = [
  "concision-core/approx",
  "concision-data?/approx",
]

complex = [
  "concision-core/complex",
  "concision-data?/complex",
]

json = [
  "concision-core/json",
  "concision-data?/json",
]

rand = [
  "concision-core/rand",
  "concision-data?/rand",
]

rng = [
  "concision-core/rng",
  "concision-data?/rng",
]

rayon = [
  "concision-core/rayon",
  "concision-data?/rayon",
]

rustfft = [
  "concision-core/rustfft",
]

serde = [
  "concision-core/serde",
  "concision-data?/serde",
]

tracing = [
  "concision-core/tracing",
  "concision-data?/tracing",
]

# ********* [FF] Blas *********
blas = [
  "concision-core/blas",
  "concision-data?/blas",
]

intel-mkl-system = ["blas"]

intel-mkl-static = ["blas"]

netlib-system = ["blas"]

netlib-static = ["blas"]

openblas-system = ["blas"]

openblas-static = ["blas"]
