[package]
build = "build.rs"
description = "this crate implements the core modules for the concision framework"
name = "concision-core"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
features = ["default"]
rustc-args = ["--cfg", "docsrs"]

[package.metadata.release]
no-dev-version = true
tag-name = "v{{version}}"

[lib]
bench = false
crate-type = ["lib"]
doctest = true
test = true

[[test]]
name = "models"
required-features = ["default", "approx", "rand"]

[dependencies]
concision-init = { workspace = true }
concision-params = { workspace = true }
concision-traits = { features = ["hashbrown"], workspace = true }
# custom
variants = { workspace = true }
# concurrency & parallelism
rayon = { optional = true, workspace = true }
# data structures
hashbrown = { workspace = true }
ndarray = { workspace = true }
# serialization
serde = { features = ["derive"], optional = true, workspace = true }
serde_derive = { optional = true, workspace = true }
serde_json = { optional = true, workspace = true }
# error-handling
anyhow = { workspace = true }
thiserror = { workspace = true }
# logging
tracing = { optional = true, workspace = true }
# macros & utilities
paste = { workspace = true }
smart-default = { workspace = true }
strum = { workspace = true }
# mathematics
approx = { optional = true, workspace = true }
num-complex = { optional = true, workspace = true }
num-integer = { workspace = true }
num-traits = { workspace = true }
rustfft = { optional = true, workspace = true }
# WebAssembly (wasm)
wasm-bindgen = { optional = true, workspace = true }

[dev-dependencies]
lazy_static = { workspace = true }

[features]
default = ["macros", "std"]

full = [
  "approx",
  "complex",
  "default",
  "json",
  "rand",
  "serde",
  "signal",
  "tracing",
]

nightly = [
  "concision-init/nightly",
  "concision-params/nightly",
  "concision-traits/nightly",
  "hashbrown/nightly",
]

# ************* [FF:Features] *************
init = ["rand"]

macros = []

json = [
  "alloc",
  "serde",
  "serde_json",
]

signal = ["complex", "rustfft"]

# ************* [FF:Dependencies] *************
std = [
  "alloc",
  "anyhow/std",
  "concision-init/std",
  "concision-params/std",
  "concision-traits/std",
  "hashbrown/default",
  "ndarray/std",
  "num-complex?/std",
  "num-integer/std",
  "num-traits/std",
  "serde?/std",
  "strum/std",
  "thiserror/std",
  "tracing?/std",
  "variants/std",
]

wasi = [
  "concision-init/wasi",
  "concision-params/wasi",
  "concision-traits/wasi",
]

wasm = [
  "wasm_bindgen",
  "concision-init/wasm",
  "concision-params/wasm",
  "concision-traits/wasm",
]

# ************* [FF:Dependencies] *************
alloc = [
  "concision-init/alloc",
  "concision-params/alloc",
  "concision-traits/alloc",
  "hashbrown/alloc",
  "serde?/alloc",
  "serde_json?/alloc",
  "variants/alloc",
]

approx = [
  "dep:approx",
  "concision-init/approx",
  "concision-params/approx",
  "ndarray/approx",
]

blas = [
  "concision-init/blas",
  "concision-params/blas",
  "ndarray/blas",
]

complex = [
  "dep:num-complex",
  "concision-init/complex",
  "concision-params/complex",
  "concision-traits/complex",
]

rand = [
  "concision-init/rand",
  "concision-params/rand",
  "concision-traits/rand",
]

rayon = [
  "dep:rayon",
  "concision-params/rayon",
  "concision-traits/rayon",
  "hashbrown/rayon",
  "ndarray/rayon",
]

rng = [
  "concision-init/rng",
  "concision-params/rng",
]

rustfft = ["dep:rustfft"]

serde = [
  "dep:serde",
  "dep:serde_derive",
  "serde?/derive",
  "concision-init/serde",
  "concision-params/serde",
  "concision-traits/serde",
  "hashbrown/serde",
  "ndarray/serde",
  "num-complex?/serde",
]

serde_json = ["dep:serde_json"]

tracing = ["dep:tracing"]

wasm_bindgen = [
  "dep:wasm-bindgen",
  "concision-init/wasm_bindgen",
  "concision-params/wasm_bindgen",
  "concision-traits/wasm_bindgen",
]
