[package]
build = "build.rs"
description = "this crate provides additional tools for working with datasets"
name = "concision-data"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib","rlib"]
bench = false
doc = true
doctest = true
test = true

# ************* [Unit Tests] *************
[[test]]
name = "default"

[[test]]
name = "loader"
required-features = ["loader"]

[dependencies]
concision-core = { workspace = true }
# custom
variants = { workspace = true }
# error handling
thiserror = { workspace = true }
# mathematics
approx = { optional = true, workspace = true }
ndarray = { workspace = true }
num = { workspace = true }
num-traits = { workspace = true }
num-complex = { optional = true, workspace = true }
# concurrency & parallelism
rayon = { optional = true, workspace = true }
# networking
reqwest = { optional = true, version = "0.12" }
# data & serialization
serde = { optional = true, workspace = true }
serde_json = { optional = true, workspace = true }
# logging
tracing = { optional = true, workspace = true }

[features]
default = [
    "std",
]

full = [
    "default",
    "approx",
    "complex",
    "json",
    "rand",
    "serde",
    "tracing",
]

nightly = [
    "concision-core/nightly",
]

# ************* [FF:Features] *************
loader = [
    "json", 
    "reqwest",
]

# ************* [FF:Environments] *************
std = [
    "alloc",
    "concision-core/std",
    "ndarray/std",
    "num/std",
    "num-complex?/std",
    "serde?/std",
    "serde_json?/std",
    "tracing?/std",
    "variants/std",
]

wasi = [
    "concision-core/wasi",
]

wasm = [
    "concision-core/wasm",
]

# ************* [FF:Dependencies] *************
alloc = [
    "concision-core/alloc",
    "num/alloc",
    "serde?/alloc",
    "variants/alloc",
]

approx = [
    "concision-core/approx",
    "dep:approx",
    "ndarray/approx",
]

blas = [
    "concision-core/blas",
    "ndarray/blas",
]

complex = [
    "dep:num-complex",
    "concision-core/complex",
]

json = [
    "alloc",
    "serde",
    "serde_json",
    "concision-core/json",
    "reqwest?/json",
]

rayon = [
    "concision-core/rayon",
    "dep:rayon",
]

rand = [
    "concision-core/rand", 
    "rng",
]

rng = [
    "concision-core/rng",
]

reqwest = ["dep:reqwest"]

serde = [
    "dep:serde",
    "concision-core/serde",
    "ndarray/serde",
    "num/serde",
    "num-complex?/serde",
]

serde_json = ["dep:serde_json"]

tracing = [
    "concision-core/tracing",
    "dep:tracing",
]

# ********* [Metadata] *********
[package.metadata.docs.rs]
all-features = false
doc-scrape-examples = true
features = ["full"]
rustc-args = ["--cfg", "docsrs"]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"
